fix a bug with scrollbars showing

--- a/src/css/style.sass
+++ b/src/css/style.sass
@@ -49,6 +49,9 @@ div.output
     // 380 is the magic number
     max-height: 380px
 
+div.output::-webkit-scrollbar
+    display: none
+
 div.input
     display: relative
     width: 100%
